# internal/server/grpc.go
@@ -2,8 +2,8 @@ package server
 
 import (
 	authV1 "server/api/auth/v1"
-	v1 "server/api/helloworld/v1"
 	m2mV1 "server/api/m2m_auth/v1"
+	permissionV1 "server/api/permission/v1"
 	"server/internal/conf"
 	"server/internal/service"
 
@@ -13,7 +13,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger, auth *service.AuthService, m2mAuth *service.M2MAuthService) *grpc.Server {
+func NewGRPCServer(c *conf.Server, logger log.Logger, auth *service.AuthService, m2mAuth *service.M2MAuthService, permission *service.PermissionService) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -29,8 +29,8 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 		opts = append(opts, grpc.Timeout(c.Grpc.Timeout.AsDuration()))
 	}
 	srv := grpc.NewServer(opts...)
-	v1.RegisterGreeterServer(srv, greeter)
 	authV1.RegisterAuthServer(srv, auth)
 	m2mV1.RegisterAuthServer(srv, m2mAuth)
+	permissionV1.RegisterPermissionServer(srv, permission)
 	return srv
 }
