# internal/server/http.go
@@ -2,8 +2,8 @@ package server
 
 import (
 	authV1 "server/api/auth/v1"
-	v1 "server/api/helloworld/v1"
 	m2mV1 "server/api/m2m_auth/v1"
+	permissionV1 "server/api/permission/v1"
 	"server/internal/conf"
 	"server/internal/service"
 
@@ -13,7 +13,7 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger, auth *service.AuthService, m2mAuth *service.M2MAuthService) *http.Server {
+func NewHTTPServer(c *conf.Server, logger log.Logger, auth *service.AuthService, m2mAuth *service.M2MAuthService, permission *service.PermissionService) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -29,8 +29,8 @@ func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
 	}
 	srv := http.NewServer(opts...)
-	v1.RegisterGreeterHTTPServer(srv, greeter)
 	authV1.RegisterAuthHTTPServer(srv, auth)
 	m2mV1.RegisterAuthHTTPServer(srv, m2mAuth)
+	permissionV1.RegisterPermissionHTTPServer(srv, permission)
 	return srv
 }
